--- a/src/styles/layout/_note_display.scss
+++ b/src/styles/layout/_note_display.scss
@@ -1,4 +1,7 @@
 .NoteDisplay {
+  max-height: 75%;
+  overflow-y: auto;
+
   .title {
     color: $green;
     font-size: 2rem;
