--- a/src/styles/layout/_notes_list.scss
+++ b/src/styles/layout/_notes_list.scss
@@ -1,4 +1,7 @@
 .NotesList {
+  height: 100%;
+  overflow-y: auto;
+  
   &__notes {
     display: flex;
     flex-direction: column-reverse;
