--- a/src/styles/layout/_right.scss
+++ b/src/styles/layout/_right.scss
@@ -1,5 +1,5 @@
 .right {
-  width: 100%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
